--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,8 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class="container">
+    	<h1>Heap Sort</h1>
+    </div>
   </body>
 </html>
