--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,26 +6,35 @@ body {
   width: 100%;
 }
 
+a{
+	text-decoration: none;
+	color: #84DCC6;
+}
 
 .close-animatedModal{
 	padding-top: 40px;
 }
 
 .header{
-	padding: 20px 20px 20px 20px;
+	padding: 40px 80px 20px 40px;
 	font-size: 1em;
 	display: flex;
-    justify-content: right;
-    align-items: center;
+    flex-direction: row;
+    align-items: flex-end;
     text-decoration: none;
+    justify-content: flex-end;
     color: #222222;
 }
 
 .container{
-	height: 90vh;
+	height: 80vh;
 	display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.link{
+	padding: 0px 20px 0px 20px;
 }
 
 .innermost_circ{
