--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,9 @@
 <body>
 
 <div class="header">
-  <a id="analytics" href="#animatedModal">Analytics</a>
+  <a class="link" id="analytics" href="#animatedModal">Analytics</a>
+  <a class="link" id="analytics2" href="#modal2">Analytics2</a>
+  
 </div>
 
   <div class = "container">
@@ -36,6 +38,20 @@
                   <!--Your modal content goes here-->
         </div>
     </div>
+
+    <div id="modal2">
+        <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID  class="close-animatedModal" -->
+        <div class="close-modal2"> 
+            <center><img class="closebt" src="/images/closebt.svg"></center>
+        </div>
+            
+        <div class="modal-content">
+                  <!--Your modal content goes here-->
+        </div>
+    </div>
+
+
+   
   
 
 </body>
@@ -45,7 +61,22 @@
 <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
 <script src="/javascripts/jquery.easing.js"></script> 
 <script src="/javascripts/animatedModal.min.js"></script> 
-<script language="JavaScript">
+<script>
+
+function take_snapshot() {
+    Webcam.snap( function(data_uri) {
+      $('#my_camera').toggle(500);
+      $('#cam_clicker').toggle(500, function(){
+        document.getElementById('my_result').innerHTML = '<img src="'+data_uri+'"/>';
+        $('#my_result').toggle(500);
+      });
+      
+    } );
+  }
+
+$(document).ready(function(){
+$("#analytics").animatedModal();
+   $("#analytics2").animatedModal();
 
 Webcam.set({
         width: 400,
@@ -75,18 +106,12 @@ Webcam.set({
     
   });
 
-  function take_snapshot() {
-    Webcam.snap( function(data_uri) {
-      $('#my_camera').toggle(500);
-      $('#cam_clicker').toggle(500, function(){
-        document.getElementById('my_result').innerHTML = '<img src="'+data_uri+'"/>';
-        $('#my_result').toggle(500);
-      });
-      
-    } );
-  }
+  
 
-   $("#analytics").animatedModal();
+   
+
+});
+
 
 </script> 
 </html>
