--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,7 +39,7 @@ a{
 
 .innermost_circ{
 	font-family: 'Montserrat';
-	font-size: .9em;
+	font-size: .8em;
 	height: 220px;
 	width: 220px;
 	display: flex;
@@ -47,7 +47,7 @@ a{
     align-items: center;
 	margin:auto;
 	border-radius: 100%;
-    background: transparent;
+    background: white;
     border: 30px solid #F4E842;
     z-index: 1;
 }
@@ -60,7 +60,7 @@ a{
     align-items: center;
 	margin:auto;
 	border-radius: 100%;
-    background: transparent;
+    background: white;
     border: 20px solid #84DCC6;
     z-index: 1;
 }
@@ -73,7 +73,7 @@ a{
     align-items: center;
 	margin:auto;
 	border-radius: 100%;
-    background: transparent;
+    background: white;
     border: 10px solid #222222;
     z-index: 1;
 }
@@ -91,3 +91,17 @@ a{
 	position: absolute;
 	top: 70%;
 }
+
+#splash {
+  width: 100%;
+  min-height: 100%;
+  position: relative;
+  overflow: hidden; }
+
+ canvas{
+
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+ }
