--- a/HeapSortAndroid/app/src/main/res/layout/activity_main.xml
+++ b/HeapSortAndroid/app/src/main/res/layout/activity_main.xml
@@ -16,19 +16,31 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="#84DCC6"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/clickme"
+            android:layout_width="match_parent"
+            android:layout_height="600px"
+            android:layout_gravity="center"
+            android:background="@drawable/click_button"
+            android:text="click"/>
+
+        <ImageView
+            android:id="@+id/thumbnail"
+            android:layout_width="300px"
+            android:layout_height="300px"
+            android:layout_gravity="center"/>
+
+    </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
