--- a/HeapSortAndroid/app/src/main/res/layout/activity_main.xml
+++ b/HeapSortAndroid/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,12 @@
             android:layout_height="700px"
             android:layout_gravity="center"/>
 
+        <TextView
+            android:id="@+id/results"
+            android:layout_width="match_parent"
+            android:layout_height="300px"
+            android:layout_gravity="bottom"/>
+
     </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
