Created JSON for Wordcloud

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -148,6 +148,7 @@
 
   $(document).ready(function(){
     var composition = <%- JSON.stringify(comp) %>;
+    var wordCloud =  <%- JSON.stringify(cloud) %>;
     $("#analytics").animatedModal();
     $("#analytics2").animatedModal();
 
