--- a/HeapSortAndroid/app/src/main/res/layout/activity_main.xml
+++ b/HeapSortAndroid/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.melody.heapsortandroid.MainActivity">
+    tools:context="com.example.melody.heapsortandroid.HeapSort">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -24,6 +24,7 @@
     <include layout="@layout/content_main" />
 
     <FrameLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -33,19 +34,35 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:background="@drawable/click_button"
-            android:text="click"/>
+            android:text="Heap Sort"
+            android:fontFamily="Montserrat"
+            android:textSize="16pt"
+            android:textStyle="bold"/>
 
         <ImageView
             android:id="@+id/thumbnail"
-            android:layout_width="700px"
-            android:layout_height="700px"
+            android:layout_width="650px"
+            android:layout_height="650px"
             android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/tags"
+            android:layout_width="match_parent"
+            android:layout_height="200px"
+            android:layout_gravity="bottom"
+            android:textAlignment="center"
+            android:layout_marginBottom="200px"
+            android:fontFamily="Montserrat"/>
 
         <TextView
             android:id="@+id/results"
             android:layout_width="match_parent"
-            android:layout_height="300px"
-            android:layout_gravity="bottom"/>
+            android:layout_height="200px"
+            android:layout_gravity="bottom"
+            android:textAlignment="center"
+            android:fontFamily="Montserrat"
+            android:textSize="12pt"
+            android:textStyle="bold"/>
 
     </FrameLayout>
 
